<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:stretchColumns="*"
    android:background="#DBE5E5"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:weightSum="100"
    android:padding="5dp">
    <LinearLayout android:orientation="horizontal" android:layout_marginTop="4dp"
        android:layout_width="match_parent" android:layout_weight="28" android:layout_height="1dp">
        <TextView
            android:id="@+id/textViewResult"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="3dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="1dp"
            android:background="#BFB296"
            android:gravity="center_vertical|end"
            android:padding="3dp"
            android:text=""
            android:textSize="45sp"
            tools:layout_editor_absoluteX="35dp"
            tools:layout_editor_absoluteY="153dp"
            android:maxLines = "1"
            android:layout_weight="4"
            />

        <Button
            android:id="@+id/buttonResult"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginBottom="1dp"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:text="@string/result"
            android:background="#B49FD6"
            tools:layout_editor_absoluteX="200dp"
            tools:layout_editor_absoluteY="349dp"
            android:textSize="30sp"
            android:layout_weight="1"
            />
    </LinearLayout>


        <LinearLayout android:orientation="horizontal" android:layout_marginTop="4dp"
            android:layout_width="match_parent" android:layout_weight="18" android:layout_height="50dp">
            <Button
                android:id="@+id/button0"
                style="@style/buttonNumber"
                android:text="@string/_1" />
            <Button
                android:id="@+id/button1"
                style="@style/buttonNumber"
                android:text="@string/_2" />
            <Button
                android:id="@+id/button2"
                style="@style/buttonNumber"
                android:text="@string/_3" />
            <Button
                android:id="@+id/buttonDel"
                style="@style/buttonOperation"
                android:text="@string/del"/>

        </LinearLayout>

    <LinearLayout android:orientation="horizontal" android:layout_marginTop="4dp"
        android:layout_width="match_parent" android:layout_weight="18" android:layout_height="50dp">
    <Button
        android:id="@+id/button3"
        style="@style/buttonNumber"
        android:text="@string/_4"/>

    <Button
        android:id="@+id/button4"
        style="@style/buttonNumber"
        android:text="@string/_5" />

    <Button
        android:id="@+id/button5"
        style="@style/buttonNumber"
        android:text="@string/_6" />

    <Button
        android:id="@+id/buttonNull"
        style="@style/buttonNumber"
        android:text="@string/_0"/>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_marginTop="4dp"
        android:layout_width="match_parent" android:layout_weight="18" android:layout_height="50dp">
    <Button
        android:id="@+id/button6"
        style="@style/buttonNumber"
        android:text="@string/_7" />

    <Button
        android:id="@+id/button7"
        style="@style/buttonNumber"
        android:text="@string/_8" />

    <Button
        android:id="@+id/button8"
        style="@style/buttonNumber"
        android:text="@string/_9" />
    <Button
        android:id="@+id/buttonPoint"
        style="@style/buttonOperation"
        android:text="@string/point"/>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_marginTop="4dp"
        android:layout_width="match_parent" android:layout_weight="18" android:layout_height="50dp">
    <Button
        android:id="@+id/buttonPlus"
        style="@style/buttonOperation"
        android:text="@string/plus" />

    <Button
        android:id="@+id/buttonMinus"
        style="@style/buttonOperation"
        android:text="@string/minus" />
    <Button
        android:id="@+id/buttonMult"
        style="@style/buttonOperation"
        android:text="@string/mult" />

    <Button
        android:id="@+id/buttonDiv"
        style="@style/buttonOperation"
        android:text="@string/div"/>
    </LinearLayout>

</LinearLayout>